# IPDuck

./: README.md  docker-compose.yml
.github/workflows/: docker.yml
app/: Dockerfile  app.py
app/static/css/: index.css
app/static/js/: index.js
app/templates/: index.html
app_py/: .dockerignore  Dockerfile  Pipfile  app.py  pyproject.toml  supervisord.conf
app_py/templates/: index.html
app_rs/: Cargo.toml  Dockerfile
app_rs/src/: main.rs  routes.rs  staticfiles.rs  templates.rs
app_rs/static/css/: index.css
app_rs/templates/: index.html
nginx/: nginx.conf
