[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
