[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.0"
actix-web-rust-embed-responder = "2.1.1"
askama = "0.14.0"
askama_web = { version = "0.14.0", features = ["actix-web-4"] }
dotenvy = "0.15.7"
envy = "0.4.2"
rust-embed-for-web = "11.3.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
